# goal-getter-backend

./: .env.example  .gitignore  AGENTS-BACKEND.md  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose-hmg.yml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
alembic/: env.py
app/: main.py  seeder.py
app/core/: config.py  dependencies.py  logging.py  security.py  timezone.py
app/models/: __init__.py  agendamento.py  agendamento_historico.py  atribuicao.py  diario_config.py  diario_item.py  diario_item_anotacao.py  enums.py  grupo.py  nivel.py  perfil.py  unidade.py  usuario.py
app/routers/: agendamentos.py  auth.py  daily_configs.py  daily_items.py  grupos.py  niveis.py  petrvs.py  unidades.py  usuarios.py
app/schemas/: agendamento.py  atribuicao.py  auth.py  daily.py  grupo.py  nivel.py  pagination.py  perfil.py  petrvs.py  unidade.py  usuario.py
app/services/: agendamento_service.py  auth_service.py  daily_config_service.py  daily_item_service.py  grupo_service.py  nivel_service.py  petrvs_service.py  unidade_service.py  usuario_service.py
scripts/: __init__.py  pyrefly_cli.py
