[tool.poetry]
name = "goal-getter-backend"
version = "1.0.0"
description = "Backend for Goal Getter app"
authors = ["Admin"]
readme = "README.md"
packages = [
    { include = "app" },
    { include = "scripts" }
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = "^0.111.0"
"uvicorn" = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.1.3"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
python-multipart = "^0.0.9"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
pyrefly = "^0.1.0"
pyright = "^1.1.411"

[tool.poetry.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
pyrefly = "scripts.pyrefly_cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

